Fixed visible cursor bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 * {
   margin: 0;
   padding: 0;
-  @apply cursor-none;
+  cursor: none !important;
 
   &::selection {
     color: black;
